--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
     </style>
 </head>
 <body>
-
+<audio src="sad.mp3" autoplay loop hidden></audio>
     <div id="page1" class="page active">
-        <div class="header">🎂 শুভ জন্মদিন, প্রিয়তমা! ❤️</div>
+        <div class="header">🎂 শুভ জন্মদিন, প্রিয়তমা তিথি! ❤️</div>
         <div class="photo-container">
             <img src="tithi.jpg" alt="আমার প্রিয় মানুষ">
         </div>
@@ -203,7 +203,7 @@
     <div id="page3" class="page">
         <div class="header">আমাদের কিছু সুন্দর মুহূর্ত...</div>
         <div class="message">
-            তোমার সাথে কাটানো প্রতিটি মুহূর্তই আমার কাছে অমূল্য। মনে আছে সেই প্রথম দেখা হওয়ার দিন? সেই দিন থেকেই আমার জীবন বদলে গেছে। [এখানে একটি বিশেষ স্মৃতির কথা লিখতে পারেন]
+            তোমার সাথে কাটানো প্রতিটি মুহূর্তই আমার কাছে অমূল্য। মনে আছে সেই প্রথম দেখা হওয়ার দিন? সেই দিন থেকেই আমার জীবন বদলে গেছে।
         </div>
     </div>
 
@@ -246,7 +246,7 @@
     </div>
     
     <div id="page9" class="page">
-        <div class="header">১২ অক্টোবর 🎉</div>
+        <div class="header">১২ অক্টোবর,২০২৫ 🎉</div>
         <div class="message">
             আজকের এই দিনটা শুধু তোমার জন্য। সারাটা দিন আনন্দে আর হাসিতে ভরে উঠুক।
         </div>
